--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+@use 'tailwindcss';
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin: 0;
+    box-sizing: border-box;
+    overflow-x: hidden;
+}
