--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,7 @@ body {
 }
 
 body {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding:0;
     margin: 0;
     box-sizing: border-box;
     overflow-x: hidden;
