--- a/src/app/pages/config/config.html
+++ b/src/app/pages/config/config.html
@@ -1,5 +1,5 @@
 <div class="flex items-center justify-center min-h-screen">
-    <form class="w-full max-w-sm bg-white p-6 rounded-lg shadow-md flex flex-col items-center">
+    <div class="w-full max-w-sm bg-white p-6 rounded-lg shadow-md flex flex-col items-center">
         <!-- Logo -->
         <img src="/images/sheets.png" alt="App Logo" class="w-16 h-16 mb-4" />
 
@@ -12,10 +12,8 @@
                 SpreadSheet URL
             </label>
             <input
-                type="email"
-                id="email"
+                type="text"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5"
-                required
             />
         </div>
 
@@ -25,7 +23,6 @@
             <input
                 type="text"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5"
-                required
             />
         </div>
 
@@ -35,16 +32,15 @@
             <input
                 type="text"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5"
-                required
             />
         </div>
 
         <!-- Submit -->
         <button
-            type="button"
+            (click)="test()"
             class="w-full p-2.5 text-white bg-green-700 hover:bg-green-800 font-medium rounded-lg text-sm me-2 mb-2"
         >
             Save
         </button>
-    </form>
+    </div>
 </div>
