--- a/src/app/pages/config/config.html
+++ b/src/app/pages/config/config.html
@@ -37,6 +37,7 @@
 
         <!-- Submit -->
         <button
+            (click)="checkConfig()"
             class="w-full p-2.5 text-white bg-green-700 hover:bg-green-800 font-medium rounded-lg text-sm me-2 mb-2"
         >
             Save
