--- a/src/app/pages/config/config.html
+++ b/src/app/pages/config/config.html
@@ -30,7 +30,8 @@
         <div class="w-full mb-5">
             <label class="block mb-2 text-sm font-medium text-gray-900"> Credential Path </label>
             <input
-                type="text"
+                accept=".json"
+                type="file"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5"
             />
         </div>
