--- a/src/app/pages/config/config.html
+++ b/src/app/pages/config/config.html
@@ -1,47 +1,66 @@
 <div class="flex items-center justify-center min-h-screen">
     <div class="w-full max-w-sm bg-white p-6 rounded-lg shadow-md flex flex-col items-center">
-        <!-- Logo -->
-        <img src="/images/sheets.png" alt="App Logo" class="w-16 h-16 mb-4" />
+        <form [formGroup]="configForm" >
+            <!-- Logo -->
+            <img src="/images/sheets.png" alt="App Logo" class="w-16 h-16 mb-4" />
 
-        <!-- Title -->
-        <h1 class="text-2xl font-semibold text-center mb-6 text-gray-800">Config</h1>
+            <!-- Title -->
+            <h1 class="text-2xl font-semibold text-center mb-6 text-gray-800">Config</h1>
 
-        <!-- SpreadSheet URL -->
-        <div class="w-full mb-5">
-            <label for="email" class="block mb-2 text-sm font-medium text-gray-900">
-                SpreadSheet URL
-            </label>
-            <input
-                type="text"
-                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5"
-            />
-        </div>
+            <!-- SpreadSheet URL -->
+            <div class="w-full mb-5">
+                <label class="block mb-2 text-sm font-medium text-gray-900">
+                    SpreadSheet URL
+                </label>
+                <input
+                    formControlName="spreadSheetUrl"
+                    (input)="onSpreadSheetUrlChange($event)"
+                    type="text"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5"
+                />
+                @if(submitted && configForm.get('spreadSheetUrl')?.invalid) {
+                <div class="text-red-600 text-sm mt-1">URL không được để trống</div>
+                }
+            </div>
 
-        <!-- SpreadSheet ID -->
-        <div class="w-full mb-5">
-            <label class="block mb-2 text-sm font-medium text-gray-900"> SpreadSheet ID </label>
-            <input
-                type="text"
-                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5"
-            />
-        </div>
+            <!-- SpreadSheet ID -->
+            <div class="w-full mb-5">
+                <label class="block mb-2 text-sm font-medium text-gray-900"> SpreadSheet ID </label>
+                <input
+                    formControlName="spreadSheetId"
+                    type="text"
+                    readonly
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5"
+                />
+                @if (submitted && configForm.get('spreadSheetId')?.invalid) {
+                <div class="text-red-600 text-sm mt-1">ID không được để trống</div>
+                }
+            </div>
 
-        <!-- Credential Path -->
-        <div class="w-full mb-5">
-            <label class="block mb-2 text-sm font-medium text-gray-900"> Credential Path </label>
-            <input
-                accept=".json"
-                type="file"
-                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5"
-            />
-        </div>
+            <!-- Credential File -->
+            <div class="w-full mb-5">
+                <label class="block mb-2 text-sm font-medium text-gray-900">
+                    Credential
+                </label>
+                <input
+                    (change)="onSelectFile($event)"
+                    accept=".json"
+                    type="file"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5"
+                />
+                @if(submitted && !selectedFile) {
+                <div class="text-red-600 text-sm mt-1">File credential không được để trống</div>
+                }
+            </div>
 
-        <!-- Submit -->
-        <button
-            (click)="checkConfig()"
-            class="w-full p-2.5 text-white bg-green-700 hover:bg-green-800 font-medium rounded-lg text-sm me-2 mb-2"
-        >
-            Save
-        </button>
+            <!-- Submit -->
+            <button
+                (click)="saveConfig()"
+                type="submit"
+                class="w-full p-2.5 text-white bg-green-700 hover:bg-green-800 font-medium rounded-lg text-sm me-2 mb-2"
+            >
+                Save
+            </button>
+        </form>
     </div>
 </div>
