--- a/src/app/pages/add-invoice/add-invoice.html
+++ b/src/app/pages/add-invoice/add-invoice.html
@@ -1,4 +1,47 @@
 <div class="px-3 space-y-6 bg-white rounded-2xl shadow-md">
+    <!-- Tra cứu hóa đơn -->
+    <div class="bg-white shadow-md rounded-2xl p-2 mt-6 border border-gray-100">
+        <div class="mb-3">
+            <h2 class="text-xl font-semibold text-gray-800 flex items-center gap-2">
+                <i class="fa-solid fa-file-invoice text-green-500"></i>
+                Tra cứu hóa đơn
+            </h2>
+        </div>
+
+        <!-- Captcha -->
+        <div class="flex flex-row sm:flex-row sm:items-center gap-2 mb-2">
+            <div class="flex flex-1 items-center gap-3">
+                <img [src]="captchaImage" alt="no captcha" class="img" />
+            </div>
+
+            <button (click)="loadCaptcha()" class="icon-btn">
+                <fa-icon [icon]="faArrowsRotate" />
+            </button>
+        </div>
+
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-2">
+            <input
+                type="text"
+                [(ngModel)]="captchaInput"
+                placeholder="Nhập mã Captcha"
+                class="input"
+            />
+
+            <input type="text" [(ngModel)]="invoiceCode" placeholder="Mã hóa đơn" class="input" />
+
+            <input
+                type="text"
+                [(ngModel)]="invoiceCT"
+                placeholder="Mã CT"
+                class="input sm:col-span-2"
+            />
+
+            <button (click)="getInvoiceInfo()" class="btn-success sm:col-span-2">Tra cứu</button>
+        </div>
+    </div>
+
+    <hr class="my-6 border-gray-200" />
+
     <!-- Người bán -->
     <div class="bg-white shadow-md rounded-2xl p-2 border border-gray-100">
         <div class="flex items-center justify-between mb-4">
@@ -45,67 +88,6 @@
 
     <hr class="my-6 border-gray-200" />
 
-    <!-- Tra cứu hóa đơn -->
-    <div class="bg-white shadow-md rounded-2xl p-2 mt-6 border border-gray-100">
-        <div class="flex items-center justify-between mb-3">
-            <h2 class="text-xl font-semibold text-gray-800 flex items-center gap-2">
-                <i class="fa-solid fa-file-invoice text-green-500"></i>
-                Tra cứu hóa đơn
-            </h2>
-            <button
-                (click)="loadCaptcha()"
-                class="text-sm text-blue-600 hover:text-blue-800 flex items-center gap-1"
-            >
-                <i class="fa-solid fa-rotate-right"></i> Tải Captcha
-            </button>
-        </div>
-
-        <!-- Captcha -->
-        <div class="flex flex-col sm:flex-row sm:items-center gap-2 mb-2">
-            <div class="flex items-center gap-3">
-                @if (captchaImage) {
-                <img
-                    [src]="captchaImage"
-                    alt="captcha"
-                    class="h-12 w-full border rounded-lg object-contain shadow-sm"
-                />
-                }
-            </div>
-
-            <input
-                type="text"
-                [(ngModel)]="captchaInput"
-                placeholder="Nhập mã Captcha"
-                class="w-full sm:max-w-xs border border-gray-300 rounded-lg px-3 py-2 text-sm focus:ring-2 focus:ring-blue-400 focus:outline-none"
-            />
-        </div>
-
-        <!-- Mã hóa đơn -->
-        <div class="grid sm:grid-cols-3 gap-2">
-            <input
-                type="text"
-                [(ngModel)]="invoiceCode"
-                placeholder="Mã hóa đơn"
-                class="w-full border border-gray-300 rounded-lg px-3 py-2 text-sm focus:ring-2 focus:ring-blue-400 focus:outline-none"
-            />
-            <input
-                type="text"
-                [(ngModel)]="invoiceCT"
-                placeholder="Mã CT"
-                class="w-full border border-gray-300 rounded-lg px-3 py-2 text-sm focus:ring-2 focus:ring-blue-400 focus:outline-none"
-            />
-            <button
-                (click)="getInvoiceInfo()"
-                class="inline-flex items-center justify-center px-3 py-2 text-sm font-semibold text-white bg-green-600 rounded-lg hover:bg-green-700 transition"
-            >
-                <i class="fa-solid fa-magnifying-glass mr-2"></i>
-                Tra cứu
-            </button>
-        </div>
-    </div>
-
-    <hr class="my-6 border-gray-200" />
-
     <!-- Danh sách hàng hóa trong hóa đơn -->
     <div class="bg-white shadow-md rounded-2xl p-2 mt-6 border border-gray-100">
         <div class="flex items-center justify-between mb-4">
@@ -116,40 +98,34 @@
         </div>
 
         <!-- Danh sách item -->
-        <div class="space-y-3">
+        <div class="space-y-3 mb-2">
             @for (item of invoiceItems; track $index) {
             <div
-                class="flex flex-col sm:flex-row items-start sm:items-center gap-3 p-3 bg-gray-50 rounded-xl shadow-sm border border-gray-200 transition hover:shadow-md"
+                class="grid grid-cols-1 sm:grid-cols-2 gap-3 p-3 bg-gray-50 rounded-xl shadow-sm border border-gray-200 transition hover:shadow-md"
             >
                 <input
                     type="text"
                     [(ngModel)]="item.name"
                     placeholder="Tên hàng"
-                    class="w-full flex-1 border border-gray-300 rounded-lg px-3 py-2 text-sm focus:ring-2 focus:ring-indigo-400 focus:outline-none"
+                    class="input w-full flex-1"
                 />
-                <div class="grid grid-cols-2 gap-2">
+                <div class="grid grid-cols-3 gap-2 w-full">
                     <input
                         type="number"
                         [(ngModel)]="item.price"
                         placeholder="Giá"
-                        class="w-full sm:w-32 border border-gray-300 rounded-lg px-3 py-2 text-sm focus:ring-2 focus:ring-indigo-400 focus:outline-none"
+                        class="input w-full col-span-2"
                     />
-                    <button
-                        (click)="removeInvoiceItem($index)"
-                        class="inline-flex items-center justify-center gap-2 px-3 py-2 text-sm font-medium text-red-600 border border-red-300 rounded-lg hover:bg-red-50 transition"
-                    >
-                        <i class="fa-solid fa-trash"></i> Xóa
+                    <button (click)="removeInvoiceItem($index)" class="btn-danger w-full">
+                        <fa-icon [icon]="faTrash" />
                     </button>
                 </div>
             </div>
             }
         </div>
 
-        <button
-            (click)="addInvoiceItem()"
-            class="mt-4 inline-flex items-center gap-2 px-4 py-2 text-sm font-semibold text-indigo-600 border border-indigo-300 rounded-lg hover:bg-indigo-50 transition"
-        >
-            <i class="fa-solid fa-plus"></i> Thêm hàng hóa
+        <button (click)="addInvoiceItem()" class="btn-success">
+            <fa-icon [icon]="faCirclePlus" />
         </button>
     </div>
 
@@ -164,23 +140,23 @@
             </h2>
         </div>
 
-        <div class="space-y-3">
+        <div class="space-y-3 mb-2">
             @for (item of extraItems; track $index) {
             <div
-                class="flex flex-col sm:flex-row items-start sm:items-center gap-3 p-3 bg-gray-50 rounded-xl shadow-sm border border-gray-200 transition hover:shadow-md"
+                class="grid grid-cols-1 sm:grid-cols-2 gap-3 p-3 bg-gray-50 rounded-xl shadow-sm border border-gray-200 transition hover:shadow-md"
             >
                 <input
                     type="text"
                     [(ngModel)]="item.name"
                     placeholder="Tên hàng"
-                    class="w-full flex-1 border border-gray-300 rounded-lg px-3 py-2 text-sm focus:ring-2 focus:ring-indigo-400 focus:outline-none"
+                    class="input w-full flex-1"
                 />
-                <div class="grid grid-cols-2 gap-2">
+                <div class="grid grid-cols-3 gap-2 w-full">
                     <input
                         type="number"
                         [(ngModel)]="item.price"
                         placeholder="Giá"
-                        class="w-full sm:w-32 border border-gray-300 rounded-lg px-3 py-2 text-sm focus:ring-2 focus:ring-indigo-400 focus:outline-none"
+                        class="input w-full col-span-2"
                     />
                     <button
                         (click)="removeExtraItem($index)"
@@ -193,11 +169,8 @@
             }
         </div>
 
-        <button
-            (click)="addExtraItem()"
-            class="mt-4 inline-flex items-center gap-2 px-4 py-2 text-sm font-semibold text-emerald-600 border border-emerald-300 rounded-lg hover:bg-emerald-50 transition"
-        >
-            <i class="fa-solid fa-plus"></i> Thêm hàng hóa
+        <button (click)="addExtraItem()" class="btn-success">
+            <fa-icon [icon]="faCirclePlus" />
         </button>
     </div>
 
@@ -215,7 +188,7 @@
                 <input
                     type="date"
                     [(ngModel)]="invoiceDate"
-                    class="w-full border border-gray-300 rounded-lg px-3 py-2 text-sm focus:ring-2 focus:ring-blue-400 focus:outline-none"
+                    class="input w-full"
                 />
             </div>
 
@@ -246,9 +219,8 @@
         <div class="text-center mt-6">
             <button
                 (click)="saveInvoice()"
-                class="inline-flex items-center gap-2 px-8 py-3 text-base font-semibold text-white bg-green-600 rounded-xl shadow hover:bg-green-700 transition"
+                class="w-full sm:col-span-2 inline-flex items-center justify-center px-3 py-2 text-sm font-semibold text-white bg-green-600 rounded-lg hover:bg-green-700 transition"
             >
-                <i class="fa-solid fa-floppy-disk"></i>
                 Lưu hóa đơn
             </button>
         </div>
