--- a/src/app/pages/add-invoice/add-invoice.html
+++ b/src/app/pages/add-invoice/add-invoice.html
@@ -11,7 +11,7 @@
         <!-- Captcha -->
         <div class="flex flex-row sm:flex-row sm:items-center gap-2 mb-2">
             <div class="flex flex-1 items-center gap-3">
-                <img [src]="captchaImage" alt="no captcha" class="img" />
+                <img [src]="captchaSession().captcha_path" alt="no captcha" class="img" />
             </div>
 
             <button (click)="loadCaptcha()" class="icon-btn">
