--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-50 p-4 flex flex-col gap-4 max-w-md mx-auto">
+<div class="bg-gray-50 flex flex-col gap-4 max-w-md mx-auto">
     <h1 class="text-xl font-bold text-center text-gray-800 mb-4">Tổng quan tài chính</h1>
 
     <!-- Tiền mặt -->
