--- a/src/app/shared/components/layout/main-layout/main-layout.html
+++ b/src/app/shared/components/layout/main-layout/main-layout.html
@@ -107,6 +107,6 @@
 </nav>
 
 <!-- Main content -->
-<main class="pt-18 bg-gray-50 min-h-screen">
+<main class="pt-20 px-2 pb-2 bg-gray-50 min-h-screen">
     <router-outlet></router-outlet>
 </main>
